syntax.txt
expression -> equality ;
equality -> comparison ( ("!=" | "=" ) comparison )* ;
comparison -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term -> factor ( ( "-" | "+" ) factor )* ;
factor -> unary ( ( "/" | "*" ) unary )* ;
unary -> ("NOT" | "-"  unary) | primary;
primary -> FLOAT | INT | STRING | BOOL | "(" expression ")" ;
